# airest

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  SCHEMA.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/deploy/: production.md
docs/guardrails/: dynamic-plugins.md
docs/otel/: dashboards.md  grafana-dashboard.json
examples/: README.md  runall.sh
examples/analytics/: README.md  guardrail-text-limit.ts  quick-sentiment.yaml  sentiment-analyzer.yaml  text-summarizer.yaml
examples/auth/: README.md  jwt-protected.yaml  oauth2-introspect.yaml  trust-gateway.yaml
examples/content/: README.md  headline-generator.yaml
examples/finance/: README.md  payment-fraud-check.yaml
examples/gateway/: README.md
examples/guardrails/: README.md  clinical-topic-allowlist.ts  payment-amount-limit.ts  support-priority-cap.ts
examples/healthcare/: README.md  clinical-note-summary.yaml
examples/legal/: README.md  contract-risk-analyzer.yaml  nda-risk-check.yaml
examples/mcp/: README.md  kb-ticket-search-hf.yaml  kb-ticket-search-http.yaml  kb-ticket-search-local.yaml  kb-ticket-search-sse.yaml  mcp-mock-kb-remote.mjs
examples/support/: README.md  escalation-advisor.yaml  mcp-mock-kb.mjs  reply-suggester.yaml  ticket-triage.yaml
examples/tools/: README.md  search-kb-local.ts
guardrails/runtime/: bootstrap.js  guardrail-types.ts
src/: config.rs  errors.rs  lib.rs  main.rs  style.rs
src/auth/: context.rs  denylist.rs  mod.rs  registry.rs  strategies.rs  verifier.rs  verifiers.rs
src/cache/: exact.rs  fingerprint.rs  memory.rs  mod.rs  semantic.rs
src/cli/: mod.rs
src/config/: production.rs
src/definitions/: loaded.rs  (+6 more)
templates/: default-endpoint.yaml
tests/: auth_redis_jti.rs  auth_strategies.rs  cache_semantic.rs  guardrails_cache.rs  guardrails_deno.rs  guardrails_examples.rs  guardrails_typescript.rs  integration.rs  local_tools.rs  mcp_http_transport.rs  mcp_remote_transport.rs  mcp_tools.rs  otel_telemetry.rs  production_hardening.rs  roadmap_complete.rs  roadmap_features.rs
(+62 files in other folders)
