[package]
name = "airest"
version = "0.1.0"
edition = "2021"
description = "Declarative AI REST API framework"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "color"] }
dotenvy = "0.15"
handlebars = "6"
jsonschema = "0.29"
notify = "6"
owo-colors = { version = "4", features = ["supports-colors"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "limit", "timeout"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
deno_core = "0.403"
redb = "2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
swc_common = "23.0.1"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = { version = "41.0.0", features = ["typescript"] }
swc_ecma_codegen = "28.0.0"
swc_ecma_transforms_typescript = "49.0.0"
swc_ecma_transforms = "55.0.1"
swc_ecma_transforms_base = "44.0.1"

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
deno-hooks = []
auth-redis = ["dep:redis"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
